kube-prometheus-stack/templates/ingress.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: grafana-ingress
spec:
  entryPoints:
    - websecure
  routes:
  - match: Host(`grafana.dev.durp.info`) && PathPrefix(`/`) 
    kind: Rule
    services:
    - name: grafana
      port: 80
  tls:
    secretName: grafana-tls

---

apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: alertmanager-ingress
spec:
  entryPoints:
    - websecure
  routes:
  - match: Host(`alertmanager.dev.durp.info`) && PathPrefix(`/`) 
    middlewares:
    - name: whitelist
      namespace: traefik
    - name: authentik-proxy-provider
      namespace: traefik    
    kind: Rule
    services:
    - name: prometheus-alertmanager
      port: 9093
  tls:
    secretName: alertmanager-tls

---

kind: Service
apiVersion: v1
metadata:
  name: grafana-external-dns
  annotations:
    external-dns.alpha.kubernetes.io/hostname: grafana.dev.durp.info
spec:
  type: ExternalName
  externalName: dev.durp.info
